[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = 'itsh5py'
module = 'itsh5py'
author = 'Max Elfner <max_elfner@gmx.net>'
requires = [
      'PyYAML',
      'pandas',
      'numpy > 1.19',
      'h5py > 3.0',
    ]
requires-python = '>=3.7'
license = 'MIT'
home-page = "https://github.com/max3-2/itsh5py"
description-file = 'README.md'
keywords = 'h5py, hdf, data storage'
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License'
    ]

[tool.flit.metadata.requires-extra]
doc = ['Sphinx', 'Furo', 'MyST-parser']

[tool.flit.metadata.urls]
Documentation = 'https://itsh5py.readthedocs.io/en/latest/'
Source = 'https://github.com/max3-2/itsh5py'
